<resources>
    <string name="app_name">User Interface</string>
    <string name="login">Login</string>
    <string name="user_id_email_id_mobile_no">User Id / Email Id / Mobile No</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="log_in">Log In</string>
    <string name="or">Or</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_password_with_underline">Forgot Password? <u><font color='white' size='16'>Click here</font></u></string>
    <string name="dolphy">DOLPHY</string>
    <string name="appsta">APPSTA</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_bkash">আমার বিকাশ</string>


</resources>