<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout"
    tools:context=".user_interface.ui_2.Login2Activity">

    <TextView
        android:id="@+id/sloganTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:text="Your \n Best \n Experience"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold|normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/loginTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="#ddd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTv" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edit_text_bg"
            android:drawableRight="@drawable/ic_person_24"
            android:drawableTint="#FF5722"
            android:hint="Email"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:drawableRight="@drawable/ic_visibility_24"
            android:drawableTint="#FF5722"
            android:hint="Password"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@+id/emailEt"
            app:layout_constraintStart_toStartOf="@+id/emailEt"
            app:layout_constraintTop_toBottomOf="@+id/emailEt" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Forgot password"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/passwordEt"
            app:layout_constraintTop_toBottomOf="@id/passwordEt" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/login"
            android:textColor="#ff22"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/passwordEt"
            app:layout_constraintStart_toStartOf="@+id/passwordEt"
            app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

        <TextView
            android:id="@+id/tryLoginUsingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Or try login using"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/loginBtn"
            app:layout_constraintStart_toStartOf="@+id/loginBtn"
            app:layout_constraintTop_toBottomOf="@id/loginBtn" />

        <TextView
            android:id="@+id/facebookTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_triangle"
            android:drawableLeft="@drawable/ic_facebook"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
            android:padding="14dp"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/googleTv"
            app:layout_constraintEnd_toEndOf="@+id/passwordEt"
            app:layout_constraintTop_toTopOf="@+id/googleTv" />

        <TextView
            android:id="@+id/googleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_triangle"
            android:drawableLeft="@drawable/ic_search"
            android:drawableTint="@color/white"
            android:drawablePadding="8dp"
            android:padding="14dp"
            android:text="@string/google"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/passwordEt"
            app:layout_constraintTop_toBottomOf="@+id/tryLoginUsingTv" />

        <TextView
            android:id="@+id/doNotAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="Don't have an account ? Swipe up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/facebookTv"
            app:layout_constraintStart_toStartOf="@+id/googleTv"
            app:layout_constraintTop_toBottomOf="@id/googleTv" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_triangle_150"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/doNotAccountTv">

            <TextView
                android:id="@+id/registerTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="REGISTER"
                android:textColor="#ff22"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginBottom="16dp"
                android:background="#ff22"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/registerTv"
                app:layout_constraintStart_toStartOf="@+id/registerTv"
                app:layout_constraintTop_toBottomOf="@+id/registerTv" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>